2004-12-19  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_hard_regno_mode_ok): Always accept all SSE,
	MMX, 3DNOW modes in SSE registers; always accept all MMX, 3DNOW modes
	in MMX registers.
	* config/i386/i386.h (VALID_SSE2_REG_MODE): Don't include
	VALID_MMX_REG_MODE.
	* config/i386/i386.md (movv4sf_internal, movv4si_internal, 
	movv2di_internal, movv2si_internal, movv4hi_internal,
	movv2sf_internal, movv2df_internal, movv8hi_internal,
	movv16qi_internal, movti_internal): Add leading '*' to name.
	(movv2di_internal, movv2df_internal, movv8hi_internal,
	movv16qi_internal, movv2df, movv8hi, movv16qi, movv2di,
	pushv2di, pushv8hi, pushv16qi): Enable for SSE1.
	(movv2si_internal, movv4hi_internal): Add SSE alternatives.
	(movv8qi_internal, movv2sf_internal): Likewise.
	(movtf): Simplify conditional.
	(movv2sf, pushv2sf): Enable for MMX.

2004-12-19  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/19068
	* expr.c (expand_expr_real_1) <MAX_EXPR>: Ensure that target, op0
	and op1 are all registers (or constants) before expanding the RTL
	comparison sequence [to avoid reg_overlap_mentioned (target, op1)].

2004-12-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/16968
	* loop.c (scan_loop): Stop scanning the loop for movable
	insns as soon as an optimization barrier is encountered.

2004-12-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR other/18508
	* config/alpha/t-osf4 (SHLIB_LINK): Use `.backup' as the suffix
	to back up the existing shared library.
	* config/arm/t-netbsd (SHLIB_LINK): Likewise.
	* config/mips/t-iris5-6 (SHLIB_LINK): Likewise.
	* config/pa/t-hpux-shlib (SHLIB_LINK): Likewise.
	* config/sh/t-linux (SHLIB_LINK): Likewise.
	* config/t-libunwind-elf (SHLIBUNWIND_LINK): Likewise.
	* config/t-slibgcc-darwin (SHLIB_LINK): Likewise.
	* config/t-slibgcc-elf-ver (SHLIB_LINK): Likewise.
	* config/t-slibgcc-sld (SHLIB_LINK): Likewise.

2004-12-16  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/18493